--- a/Products/index.html
+++ b/Products/index.html
@@ -19,7 +19,7 @@
 
         <label for="check" id="checkbtn"><i class="fa fa-bars"></i></label>
         <ul class="Hamburger-nav">
-          <li class="Hamburger-home"><a href="../Home/index.html">Home</a></li>
+          <li class="Hamburger-home"><a href="../index.html">Home</a></li>
           <li><a href="../Classes/index.html">Classes</a></li>
           <li><a href="#">Products</a></li>
           <li><a href="../Blogs/index.html">Blogs</a></li>
@@ -34,7 +34,7 @@
           </div>
           <nav>
             <ul class="nav-list">
-              <li ><a href="../Home/index.html">Home</a></li>
+              <li ><a href="../index.html">Home</a></li>
               <li><a href="../Classes/index.html">Classes</a></li>
               <li class="home-btn"><a href="#">Products</a></li>
               <li><a href="../Blogs/index.html">Blogs</a></li>
