--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Star Fitness Gym</title>
   <link href="images/fitness_logo.png" rel="icon">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./Home/style.css">
 </head>
 
 <body>
@@ -20,9 +20,9 @@
         <label for="check" id="checkbtn"><i class="fa fa-bars"></i></label>
         <ul class="Hamburger-nav">
           <li class="Hamburger-home"><a href="#">Home</a></li>
-          <li><a href="../Classes/index.html">Classes</a></li>
-          <li><a href="../Products/index.html">Products</a></li>
-          <li><a href="../Blogs/index.html">Blogs</a></li>
+          <li><a href="./Classes/index.html">Classes</a></li>
+          <li><a href="./Products/index.html">Products</a></li>
+          <li><a href="./Blogs/index.html">Blogs</a></li>
           <li><button type="button" class="join-btn" id="joinUsBtn" onclick="openRegisterForm()">Join Us</button></li>
 
         </ul>
@@ -36,9 +36,9 @@
           <nav>
             <ul class="nav-list">
               <li class="home-btn"><a href="#">Home</a></li>
-              <li><a href="../Classes/index.html">Classes</a></li>
-              <li><a href="../Products/index.html">Products</a></li>
-              <li><a href="../Blogs/index.html">Blogs</a></li>
+              <li><a href="./Classes/index.html">Classes</a></li>
+              <li><a href="./Products/index.html">Products</a></li>
+              <li><a href="./Blogs/index.html">Blogs</a></li>
               <li><button type="button" class="join-btn" id="joinUsBtn" onclick="openRegisterForm()">Join Us</button>
               </li>
 
@@ -307,7 +307,7 @@
 
   </div>
 
-  <script src="script.js"></script>
+  <script src="./Home/script.js"></script>
 </body>
 
 </html>
