--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="nav-container">
 
           <div class="brand">
-            <a href="#"><img src="../images/logo.png" alt="Fitness Star Gym"></a>
+            <a href="#"><img src="./images/logo.png" alt="Fitness Star Gym"></a>
           </div>
           <nav>
             <ul class="nav-list">
@@ -127,12 +127,12 @@
       <div class="plans-section">
         <div class="plans">
           <div class="plan-1">
-            <img class="plan-1-img1" id="weightloss1" src="../images/weightloss.png" alt="Weight Loss">
+            <img class="plan-1-img1" id="weightloss1" src="./images/weightloss.png" alt="Weight Loss">
             <h5 id="weightloss2">Weight Loss</h5>
           </div>
           <div class="plans-border1"></div>
           <div class="plan-1">
-            <img class="plan-1-img1" id="yoga1" src="../images/classic yoga.png" alt="Classic Yoga">
+            <img class="plan-1-img1" id="yoga1" src="./images/classic yoga.png" alt="Classic Yoga">
             
 
             <h5 id="yoga2">Classic Yoga</h5>
@@ -140,20 +140,20 @@
           <div class="plans-border2"></div>
           <div class="plan-1">
 
-            <img class="plan-1-img1" id="cycling1" src="../images/cycling.png" alt="Cycling">
+            <img class="plan-1-img1" id="cycling1" src="./images/cycling.png" alt="Cycling">
             <h5 id="cycling2">Cycling</h5>
           </div>
           <div class="plans-border3"></div>
           <div class="plan-1">
-            <img class="plan-1-img1" id="bodybuilding1" src="../images/bodybuilding.png" alt="Body Building">
+            <img class="plan-1-img1" id="bodybuilding1" src="./images/bodybuilding.png" alt="Body Building">
             <h5 id="bodybuilding2">Body Building</h5>
           </div>
           <div class="plan-1">
-            <img class="plan-1-img1" id="hypertrophy1" src="../images/hypertrophy.png" alt="Hypertrophy">
+            <img class="plan-1-img1" id="hypertrophy1" src="./images/hypertrophy.png" alt="Hypertrophy">
             <h5 id="hypertrophy2">Hypertrophy</h5>
           </div>
           <div class="plan-1">
-            <img class="plan-1-img1" id="running1" src="../images/running.png" alt="Running">
+            <img class="plan-1-img1" id="running1" src="./images/running.png" alt="Running">
             <h5 id="running2">Running</h5>
           </div>
         </div>
@@ -201,24 +201,24 @@
       </div>
 
       <div class="fitness-club">
-        <img src="../images/Fitness_club.png" alt="">
+        <img src="./images/Fitness_club.png" alt="">
       </div>
 
       <div class="features-section">
         <div class="feature-img"></div>
         <div class="features">
           <div class="feature">
-            <img src="../images/gm.png" alt="Good Management">
+            <img src="./images/gm.png" alt="Good Management">
             <h4>Good Management</h4>
             <p>What hurts today makes you stronger tomorrow.</p>
           </div>
           <div class="feature">
-            <img src="../images/ps1.jpg" alt="Practice Sessions">
+            <img src="./images/ps1.jpg" alt="Practice Sessions">
             <h4>Practice Sessions</h4>
             <p>Motivation is what gets you started.</p>
           </div>
           <div class="feature">
-            <img src="../images/ft2 1.png" alt="Personal Trainers">
+            <img src="./images/ft2 1.png" alt="Personal Trainers">
             <h4>Personal Trainers</h4>
             <p>If it doesn’t challenge you, it won’t change you.</p>
           </div>
@@ -229,19 +229,19 @@
         <h1>Success Stories</h1>
         <div class="stories">
           <div class="story">
-            <img src="../images/hero1.png" alt="Success Story 1">
+            <img src="./images/hero1.png" alt="Success Story 1">
             <p>Working out regularly, I lose
               some of my extra pounds which
               helped in my modeling career.</p>
           </div>
           <div class="story">
-            <img src="../images/hero2.png" alt="Success Story 2">
+            <img src="./images/hero2.png" alt="Success Story 2">
             <p>Yoga and Pilates helped
               me get back in shape
               and raised my confidence.</p>
           </div>
           <div class="story">
-            <img src="../images/Phil-heath.png" alt="Success Story 3">
+            <img src="./images/Phil-heath.png" alt="Success Story 3">
             <p>Personal Trainer skill
               and hardcore training improved
               my strength and endurance.</p>
@@ -254,7 +254,7 @@
     <footer class="footer">
       <div class="foot-container">
         <div class="foot-logo">
-          <img src="../images/logo.png" alt="Logo of Fitness Star Gym">
+          <img src="./images/logo.png" alt="Logo of Fitness Star Gym">
           <h3>Prioritize Your Fitness Goals
             with our world class services</h3>
         </div>
