--- a/index.html
+++ b/index.html
@@ -113,13 +113,13 @@
       <div class="social-icons">
         <div class="font-awesome">
           <a href="https://www.whatsapp.com/" target="_blank">
-            <img src="../images/whatsapp.svg" alt="">
+            <img src="./images/whatsapp.svg" alt="">
           </a>
           <a href="https://www.facebook.com/" target="_blank">
-            <img src="../images/fb.svg" alt="">
+            <img src="./images/fb.svg" alt="">
           </a>
           <a href="https://www.youtube.com/" target="_blank">
-            <img src="../images/insta.svg" alt="">
+            <img src="./images/insta.svg" alt="">
           </a>
         </div>
       </div>
